--- a/newstyles.css
+++ b/newstyles.css
@@ -115,12 +115,14 @@ h1 {
   display: inline-block;
   width: 200px;
   height: 100%;
-  background: #6979F8;
-  color: #fff;
+  /* background: #6979F8;
+  color: #fff; */
   text-align: center;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 0px rgba(236,233,241,1);
   padding: 10px 0;
+  border: 2px solid #6979F8;
+  color: #6979F8;
 }
 
 .gsr-value-title {
